# PantryPal

./: .coveragerc  .dockerignore  .eslintrc.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.common.js  webpack.dev.js
.github/: build.yaml  lint-test.yml
tests/: __init__.py  conftest.py  test_api.py  test_recipes.py
web/: __init__.py  api.py  config.py  doctypes.js  recipes.py  recipies.py  views.py
web/static/: api.js  ingredients.js  main.js  modal.js  recipes.js  style.css
web/static/ts/: alerts.ts  api.ts  bootstrap.ts  errors.ts  main.ts  observe.ts
web/static/ts/controllers/: ingredients.ts  recipes.ts
web/static/ts/libs/: autocomplete.ts
web/static/ts/models/: ingredients.ts  recipes.ts  spoonacular.ts
web/static/ts/utils/: date.ts  dom.ts  structure.ts  type.ts
web/static/ts/views/: ingredients.ts  recipes.ts
web/templates/: base.html  index.html
web/templates/recipes/: index.html  recipe_modal.html  search_options.html
web/templates/recipes/modal_pages/: 01_summary.html  02_requirements.html  03_instructions.html
