[tool.poetry]
name = "site"
version = "0.1.0"
description = "Web app that takes ingredients and returns recipes."
authors = ["COMP-380-6 <85262772+1101011@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
flask = "~2.0.1"
flask-cdn = "=1.5.3"
gunicorn = "~20.1"
python = "~3.9"
whitenoise = "^5.3.0"
python-dotenv = "^0.19.2"
Flask-Limiter = "^2.0.4"
urllib3 = "^1.26.7"
requests = "^2.26.0"
limits = "^2.1.0"
idna = "^3.3"
chardet = "^4.0.0"
certifi = "^2021.10.8"
requests-mock = "^1.9.3"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "=21.5b2"
coverage = "~= 5.5"
pre-commit = "~2.13.0"
pytest = "~6.2"
pytest-flask = "~1.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
