[tool.poetry]
name = "site"
version = "0.1.0"
description = "Web app that takes ingredients and returns recipes."
authors = ["COMP-380-6 <85262772+1101011@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
flask = "~2.0.1"
flask-cdn = "=1.5.3"
flask-limiter = "~1.4"
gunicorn = "~20.1"
python = "~3.9"
requests = "~2.25"
whitenoise = "~5.2"

[tool.poetry.dev-dependencies]
black = "=21.6b0"
coverage = "~= 5.5"
pre-commit = "~2.13.0"
pytest = "~6.2"
pytest-flask = "~1.2"
pytest-mock = "~3.6"
python-dotenv = "~0.17.1"
requests-mock = "~1.9"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true
src_paths = ["tests", "web"]

[tool.pytest.ini_options]
requests_mock_case_sensitive = true